<resources>
    <string name="app_name">News</string>
    <string name="date_published">Date Published</string>
    <string name="news_author">News Author</string>
    <string name="news_title">News Title</string>
    <string name="news_image">News Image</string>
    <string name="all_news">All News</string>
    <string name="home_menu">Home</string>
    <string name="trending_menu">Trending</string>
    <string name="account_menu">Account</string>
    <string name="news_description">Description</string>
    <string name="news_source">Source :</string>
    <string name="trending_news">Trending News</string>
    <string name="sort">Sort</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="search_news">Search News</string>
    <string name="search_the_news_by">Search The News by :</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="input_query">Input Query</string>
    <string name="input_search_query">Input Search Query :</string>
    <string name="sort_news">Sort News</string>
    <string name="sort_the_news_by">Sort The News By :</string>
    <string name="popularity">Popularity</string>
    <string name="date">Date</string>
    <string name="filter_news">Filter News</string>
    <string name="filter_news_by_category">Filter News by Category :</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="general">General</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="filter_news_by_country">Filter News by Country :</string>
    <string name="america">America</string>
    <string name="chinese">Chinese</string>
    <string name="japan">Japan</string>
    <string name="korean">Korean</string>
    <string name="rusian">Rusian</string>
    <string name="thailand">Thailand</string>
    <string name="indonesian">Indonesian</string>
    <string name="news_app">News App</string>
    <string name="app_author">Created By : Andryan</string>
    <string name="news_content">Content</string>
    <string name="text_no_result">No News Result, Try Again Later !!!</string>

    <string-array name="newsCategoryList">
        <item>Choose Category</item>
        <item>Business</item>
        <item>Entertainment</item>
        <item>General</item>
        <item>Health</item>
        <item>Science</item>
        <item>Sports</item>
        <item>Technology</item>
    </string-array>

    <string-array name="newsCountryList">
        <item>Choose Country</item>
        <item>Australia</item>
        <item>Chinese</item>
        <item>France</item>
        <item>Indonesia</item>
        <item>Japan</item>
        <item>Russia</item>
        <item>South Korea</item>
        <item>Thailand</item>
        <item>United Kingdom</item>
        <item>United States</item>
    </string-array>
</resources>