<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:orientation="vertical"
    android:background="@android:color/background_dark">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/news_title"
        android:fontFamily="sans-serif"
        android:textAlignment="textStart"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:maxLines="2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textAuthor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:text="@string/news_author"
            android:fontFamily="sans-serif"
            android:textAlignment="textStart"
            android:textColor="@android:color/background_light"
            android:textSize="14sp"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/textDatePublished"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:text="@string/date_published"
            android:fontFamily="sans-serif"
            android:textAlignment="textEnd"
            android:textColor="@android:color/background_light"
            android:textSize="14sp"
            android:maxLines="1"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageNews"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        android:contentDescription="@string/news_image"/>

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2.5dp"
        android:text="@string/news_description"
        android:fontFamily="sans-serif"
        android:textAlignment="textStart"
        android:textColor="@android:color/background_light"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textSource"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/news_source"
        android:fontFamily="sans-serif"
        android:textAlignment="textStart"
        android:textColor="@android:color/background_light"
        android:textSize="14sp" />

    <View
        android:id="@+id/horizontalDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/background_light" />

</LinearLayout>