<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/contentFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="5dp"
        android:background="@drawable/bg_dialog">

        <TextView
            android:id="@+id/textFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/filter_news"
            android:fontFamily="sans-serif"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textFilterType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:layout_marginHorizontal="5dp"
                    android:text="@string/filter_news_by_category"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <RadioGroup
                    android:id="@+id/radioFilter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="7"
                    android:layout_marginHorizontal="5dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radioFilterBusiness"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/business"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                    <RadioButton
                        android:id="@+id/radioFilterEntertainment"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/entertainment"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                    <RadioButton
                        android:id="@+id/radioFilterGeneral"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/general"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                    <RadioButton
                        android:id="@+id/radioFilterHealth"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/health"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                    <RadioButton
                        android:id="@+id/radioFilterScience"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/science"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                    <RadioButton
                        android:id="@+id/radioFilterSports"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/sports"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                    <RadioButton
                        android:id="@+id/radioFilterTechnology"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/technology"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textFilterCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:layout_marginHorizontal="5dp"
                    android:text="@string/filter_news_by_country"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <RadioGroup
                    android:id="@+id/radioFilter2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="7"
                    android:layout_marginHorizontal="5dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radioFilterAmerica"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/america"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                    <RadioButton
                        android:id="@+id/radioFilterChinese"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/chinese"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                    <RadioButton
                        android:id="@+id/radioFilterJapan"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/japan"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                    <RadioButton
                        android:id="@+id/radioFilterIndonesian"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/indonesian"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                    <RadioButton
                        android:id="@+id/radioFilterKorean"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/korean"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                    <RadioButton
                        android:id="@+id/radioFilterRusian"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/rusian"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                    <RadioButton
                        android:id="@+id/radioFilterThailand"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/thailand"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                </RadioGroup>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:background="@color/white"
            android:text="@string/filter_news"
            android:textColor="@color/black"/>

    </LinearLayout>

</LinearLayout>