<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.SplashActivity">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/news_image"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/appLogo"
        android:layout_marginBottom="-50dp"
        android:text="@string/news_app"
        android:fontFamily="sans-serif"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/appAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appLogo"
        android:layout_marginTop="-45dp"
        android:text="@string/app_author"
        android:fontFamily="sans-serif"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:textStyle="bold"/>

</RelativeLayout>