<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/contentSort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="5dp"
        android:background="@drawable/bg_dialog">

        <TextView
            android:id="@+id/textSort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/sort_news"
            android:fontFamily="sans-serif"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textSearchType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/sort_the_news_by"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/radioSort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginHorizontal="5dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioSortPopularity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/popularity"
                android:fontFamily="sans-serif"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/radioSortDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date"
                android:fontFamily="sans-serif"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"/>

        </RadioGroup>

        <Button
            android:id="@+id/btnSort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/bg_dialog"
            android:backgroundTint="@color/white"
            android:text="@string/sort_news"
            android:textColor="@color/black"/>

    </LinearLayout>

</LinearLayout>